--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
         "outDir": "./build_es6_strict",
         "sourceMap": true,
         "outFile": "./build_es6_strict/main.js",
-        "alwaysStrict": true
+        "alwaysStrict": true,
+        "module": "amd"
     }
 }
